--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-login-github": "^1.0.8",
     "react-modal": "^3.16.1",
     "react-persist": "^1.0.2",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
