--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
+    "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-login-github": "^1.0.8",
