--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.16",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
