--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^1.7.15",
     "@leenguyen/react-flip-clock-countdown": "^1.4.0",
     "@react-oauth/google": "^0.8.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.3",
     "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,9 @@
     "jquery": "^3.6.4",
     "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
+    "qrcode": "^1.5.3",
+    "qrcode-svg": "^1.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
@@ -27,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-persist": "^1.0.2",
     "react-qr-code": "^2.0.11",
+    "react-qr-svg": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
