--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
-    "react-animate-on-scroll": "^2.1.7",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.1",
     "react-login-github": "^1.0.8",
     "react-modal": "^3.16.1",
     "react-persist": "^1.0.2",
