--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.12.16",
     "jquery": "^3.6.4",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
     "qrcode": "^1.5.3",
