--- a/package.json
+++ b/package.json
@@ -1,76 +1,67 @@
 {
-  "name": "tailwind-templete",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@leenguyen/react-flip-clock-countdown": "^1.4.0",
-    "@react-oauth/google": "^0.8.0",
-    "@react-pdf/renderer": "^3.1.12",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@rumess/react-flip-countdown": "^1.2.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.29.3",
-    "formik": "^2.2.9",
-    "framer-motion": "^10.12.16",
-    "jquery": "^3.6.4",
-    "jspdf": "^2.5.1",
-    "leaflet": "^1.9.4",
-    "popper.js": "^1.16.1",
-    "qrcode": "^1.5.3",
-    "qrcode-svg": "^1.1.0",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.12.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.5.1",
-    "react-login-github": "^1.0.8",
-    "react-modal": "^3.16.1",
-    "react-persist": "^1.0.2",
-    "react-qr-code": "^2.0.11",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
-    "react-toastify": "^9.1.1",
-    "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.8",
-    "tw-elements": "^1.0.0-beta1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.4"
-  }
+    "name": "tailwind-templete",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@headlessui/react": "^1.7.15",
+        "@leenguyen/react-flip-clock-countdown": "^1.4.0",
+        "@react-oauth/google": "^0.8.0",
+        "@react-pdf/renderer": "^3.1.12",
+        "@reduxjs/toolkit": "^1.9.3",
+        "@rumess/react-flip-countdown": "^1.2.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.3.4",
+        "crypto-js": "^4.1.1",
+        "date-fns": "^2.29.3",
+        "formik": "^2.2.9",
+        "framer-motion": "^10.12.16",
+        "jquery": "^3.6.4",
+        "jspdf": "^2.5.1",
+        "leaflet": "^1.9.4",
+        "popper.js": "^1.16.1",
+        "qrcode": "^1.5.3",
+        "qrcode-svg": "^1.1.0",
+        "qrcode.react": "^3.1.0",
+        "react": "^18.2.0",
+        "react-datepicker": "^4.12.0",
+        "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
+        "react-icons": "^4.8.0",
+        "react-intersection-observer": "^9.5.1",
+        "react-login-github": "^1.0.8",
+        "react-modal": "^3.16.1",
+        "react-persist": "^1.0.2",
+        "react-qr-code": "^2.0.11",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.8.2",
+        "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
+        "react-toastify": "^9.1.1",
+        "redux-persist": "^6.0.0",
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^5.3.8",
+        "tw-elements": "^1.0.0-beta1",
+        "web-vitals": "^2.1.4",
+        "yup": "^1.0.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": ["react-app", "react-app/jest"]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%", "not dead", "not op_mini all"
+        ],
+        "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.2.4"
+    }
 }
