--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "canvg": "^4.0.1",
         "crypto-js": "^4.1.1",
         "date-fns": "^2.29.3",
         "formik": "^2.2.9",
         "framer-motion": "^10.12.16",
+        "html2canvas": "^1.4.1",
         "jquery": "^3.6.4",
         "jspdf": "^2.5.1",
         "leaflet": "^1.9.4",
@@ -44,6 +46,7 @@
         "redux-persist": "^6.0.0",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.8",
+        "svg-to-dataurl": "^1.0.0",
         "tw-elements": "^1.0.0-beta1",
         "web-vitals": "^2.1.4",
         "yup": "^1.0.2"
