--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-persist": "^1.0.2",
         "react-qr-code": "^2.0.11",
         "react-redux": "^8.0.5",
+        "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "react-slick": "^0.29.0",
