--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "qrcode": "^1.5.3",
         "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
-        "react-datepicker": "^4.12.0",
+        "react-calendar": "^4.8.0",
+        "react-datepicker": "^4.25.0",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-icons": "^4.8.0",
